# devforgeai

./: .gitignore  .pre-commit-config.yaml  AI_Setup_Guide.doc  AI_Setup_Guide.docx  AI_Setup_Guide.md  CHARTER.md  CLI_README.md  INSTALL.md  PATTERN3_PHASE1_SUMMARY.md  README.md  REQUIREMENTS.md  devforgeai-cli.py  devforgeai.py  project-context.md  update_openclaw.py
backend/: .env.example  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_add_verification_tables.py  001_initial_schema.py  004_conversation_shares.py  005_remaining_tables.py  006_pipeline_events.py  007_runs_and_projects.py  add_feedback_table.py  add_user_profile.py
backend/app/: __init__.py  config.py  database.py  dependencies.py  main.py  migrate.py  redis.py  seed.py
backend/app/cli/: __init__.py  plugins.py
backend/tests/: conftest.py  test_agentic_events.py  test_agentic_pipeline.py  test_codex_oauth_connectivity.py  test_comfyui_launch.py  test_event_contract_snapshot.py  test_integration.py  test_masked_inpaint_workflow.py  test_method_feedback.py  test_model_assignment_consistency.py  test_model_catalog_guardrails.py  test_personas.py  test_phase_branch_operators.py  test_pipeline_runtime_failover.py  test_responses_api_bridge.py  test_router.py  test_run_event_contract.py  test_run_fork.py  test_run_project_attachment.py  test_run_state_machine.py  test_runs_power_tools_gate.py  test_runtime_model_resolver.py  test_scratch_invariant.py  test_stream_event_contract.py  test_workbench_runtime_resolution.py  test_workflow_hydration.py
(+208 files in other folders)
